--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input type="checkbox" name="" id="check">
             
             <div class="logo-container">
-                <h3 class="logo">Brand<span> Name</span></h3>
+                <h3 class="logo">TECHIE<span> THRIVE</span></h3>
             </div>
 
             <div class="nav-btn">
@@ -24,13 +24,13 @@
                             <a href="#">Home</a>
                         </li>
                         <li class="nav-link" style="--i: .85s">
-                            <a href="#">Menu</a></li>
+                            <a href="#">ABOUT</a></li>
                            
                         <li class="nav-link" style="--i: 1.1s">
-                            <a href="#">Services</a>
+                            <a href="#">BLOG</a>
                         </li>
                         <li class="nav-link" style="--i: 1.35s">
-                            <a href="#">About</a>
+                            <a href="#">CONTACT</a>
                         </li>
                     </ul>
                 </div> 
